--- a/Penguin_RPG/Penguin_RPG.vcxproj.filters
+++ b/Penguin_RPG/Penguin_RPG.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="dialogue.h">
+    <ClInclude Include="dialogue.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
