dialogue and creature functionality update
updated the dialogue hpp features. Created creature hpp, implemented
stats and levelling up

--- a/Penguin_RPG/Penguin_RPG.vcxproj
+++ b/Penguin_RPG/Penguin_RPG.vcxproj
@@ -63,6 +63,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="creature.hpp" />
     <ClInclude Include="dialogue.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
