--- a/Penguin_RPG/Penguin_RPG.vcxproj
+++ b/Penguin_RPG/Penguin_RPG.vcxproj
@@ -63,8 +63,11 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="armour.hpp" />
     <ClInclude Include="creature.hpp" />
     <ClInclude Include="dialogue.hpp" />
+    <ClInclude Include="item.hpp" />
+    <ClInclude Include="weapon.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
