--- a/Penguin_RPG/Penguin_RPG.vcxproj.filters
+++ b/Penguin_RPG/Penguin_RPG.vcxproj.filters
@@ -26,5 +26,14 @@
     <ClInclude Include="creature.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="item.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="weapon.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="armour.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
