--- a/Penguin_RPG/Penguin_RPG.vcxproj.filters
+++ b/Penguin_RPG/Penguin_RPG.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="armour.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inventory.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
