Finished Inventory class, added Area class
Updates to Inventory class. Defined and implemented the Area class

--- a/Penguin_RPG/Penguin_RPG.vcxproj
+++ b/Penguin_RPG/Penguin_RPG.vcxproj
@@ -63,6 +63,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="area.hpp" />
     <ClInclude Include="armour.hpp" />
     <ClInclude Include="creature.hpp" />
     <ClInclude Include="dialogue.hpp" />
